internal/gatewayapi/testdata/gateway-with-listener-with-invalid-multiple-tls-configuration.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        # expected status: ResolvedRefs: False (PartiallyInvalidCertificateRef), Programmed: True, Accepted: True
        - name: tls-contains-not-exist-ref
          protocol: HTTPS
          port: 443
          allowedRoutes:
            namespaces:
              from: All
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret-ecdsa-1
              - name: not-exist-secret
        # expected status: ResolvedRefs: False (PartiallyInvalidCertificateRef), Programmed: True, Accepted: True
        - name: tls-contains-not-exist-key-cert
          protocol: HTTPS
          port: 8443
          allowedRoutes:
            namespaces:
              from: All
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret-ecdsa-2
              - name: tls-secret-1
        # expected status: ResolvedRefs: False (InvalidCertificateRef), Programmed: False
        - name: tls-all-invalid-cert
          protocol: HTTPS
          port: 8444
          allowedRoutes:
            namespaces:
              from: All
          tls:
            mode: Terminate
            certificateRefs:
              - name: not-exist-secret
secrets:
  - apiVersion: v1
    kind: Secret
    metadata:
      namespace: envoy-gateway
      name: tls-secret-ecdsa-1
    type: kubernetes.io/tls
    data:
      tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJoVENDQVN1Z0F3SUJBZ0lVRm1sOExCRzBvL1FLNFErWjdrODI0c0MyaUZ3d0NnWUlLb1pJemowRUF3SXcKRmpFVU1CSUdBMVVFQXhNTFptOXZMbUpoY2k1amIyMHdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVdNUlF3RWdZRFZRUURFd3RtYjI4dVltRnlMbU52YlRCWk1CTUdCeXFHU000OUFnRUdDQ3FHClNNNDlBd0VIQTBJQUJMNkJRK2J1T2MvZGRkelBGSGN4Mmc1NE5RUXlaU0lES0FMYzV0ZGZ2QnJMK0taQnN4RzUKaTIvZ0JjZHZYamVWb2xxL2FiKzRuMU9zRS91d3pzMjI2bVdqVnpCVk1BNEdBMVVkRHdFQi93UUVBd0lDcERBVApCZ05WSFNVRUREQ [...]
      tls.key: LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSU1SVjRJTlNCdXhKYk9rbGRYd2Y2VXArTEhQS2dKZThLMG1sZ0JacmwwWVdvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFdm9GRDV1NDV6OTExM004VWR6SGFEbmcxQkRKbElnTW9BdHptMTErOEdzdjRwa0d6RWJtTApiK0FGeDI5ZU41V2lXcjlwdjdpZlU2d1QrN0RPemJicVpRPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
  - apiVersion: v1
    kind: Secret
    metadata:
      namespace: envoy-gateway
      name: tls-secret-ecdsa-2
    type: kubernetes.io/tls
    data:
      tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ3akNDQVVpZ0F3SUJBZ0lVU2l2SkdURHdva1M3aGVZLzJjc1JzejR2SkIwd0NnWUlLb1pJemowRUF3TXcKRmpFVU1CSUdBMVVFQXhNTFptOXZMbUpoY2k1amIyMHdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVdNUlF3RWdZRFZRUURFd3RtYjI4dVltRnlMbU52YlRCMk1CQUdCeXFHU000OUFnRUdCU3VCCkJBQWlBMklBQlAzcWdydksxY0hzTktkWmovUHZ1OEhBQTFibW5ESnF4MVJMUmdNOW52SS9BaTllWFUySVd5Z1IKL05YN0prZ1VpN3ZxN3YzdmxiTXphL21nS01yeG5DQ3Y0NnE0aWdGaE5za0hiUXJTSjhGbWp3d1k0U2hSOEsrbgo4NmZ2VTd2Q2E2T [...]
      tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JRzJBZ0VBTUJBR0J5cUdTTTQ5QWdFR0JTdUJCQUFpQklHZU1JR2JBZ0VCQkRBM2F4QVBMU1ltOXM1bWRvSjMKVXFpcGxLNVk0Ryt0eDYyeGkrZW12bWRiUFRaaUxwQmd1YnBaTXR5VVdDWXQ2b3loWkFOaUFBVDk2b0s3eXRYQgo3RFNuV1kvejc3dkJ3QU5XNXB3eWFzZFVTMFlEUFo3eVB3SXZYbDFOaUZzb0VmelYreVpJRkl1NzZ1Nzk3NVd6Ck0ydjVvQ2pLOFp3Z3IrT3F1SW9CWVRiSkIyMEswaWZCWm84TUdPRW9VZkN2cC9PbjcxTzd3bXM9Ci0tLS0tRU5EIFBSSVZBVEUgS0VZLS0tLS0K
  - apiVersion: v1
    kind: Secret
    metadata:
      namespace: envoy-gateway
      name: tls-secret-1
    type: kubernetes.io/tls
    data:
      tls.key: YmFyCg==
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - matches:
            - path:
                value: "/"
          backendRefs:
            - name: service-1
              port: 8080
